# bloom-release-ros

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  action.yml
.github/workflows/: pre-commit.yml  test.yml
scripts/: build.sh
test/package_a/: CMakeLists.txt  package.xml
test/package_b/: CMakeLists.txt  package.xml
test/package_c/: CMakeLists.txt  package.xml
test/package_d/: CMakeLists.txt  package.xml
test/package_test/: CMakeLists.txt  package.xml
test/packages-ros1/test_package_a/: CMakeLists.txt  package.xml
test/packages-ros1/test_package_b/: CMakeLists.txt  package.xml
test/packages-ros2/test_package_c/: CMakeLists.txt  package.xml
test/packages-ros2/test_package_d/: CMakeLists.txt  package.xml
