<?xml version="1.0"?>
<package format="3">
  <name>package_a</name>
  <version>1.0.0</version>
  <description>Test package A</description>
  <maintainer email="test@example.com">Test User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
