<?xml version="1.0"?>
<package format="3">
  <name>package_b</name>
  <version>2.0.0</version>
  <description>Test package B</description>
  <maintainer email="test@example.com">Test User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
