<?xml version="1.0"?>
<package format="3">
  <name>package_test</name>
  <version>0.1.0</version>
  <description>Test package for blacklist testing</description>
  <maintainer email="test@example.com">Test User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
