<?xml version="1.0"?>
<package format="2">
  <name>test_package_a</name>
  <version>1.0.0</version>
  <description>ROS1 test package A</description>
  <maintainer email="test@example.com">Test User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
