<?xml version="1.0"?>
<package format="2">
  <name>test_package_b</name>
  <version>2.0.0</version>
  <description>ROS1 test package B</description>
  <maintainer email="test@example.com">Test User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
